--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,16 @@
 .container {
   background-color: pink;
-  width: 600px;
+  width: 400px;
   display: block;
   margin: 0 auto;
+  border-radius: 10px;
 }
 
 h1 {
   font-size: 50px;
+}
+
+footer {
+  text-align: center;
+  font-size: 15px;
 }
