--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
   margin-top: 20px;
   border-radius: 10px;
   padding: 10px;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 h1 {
@@ -41,13 +41,18 @@ footer {
   padding-bottom: 20px;
   display: flex;
   justify-content: space-between;
-  max-width: 50%;
+  max-width: 40%;
   margin: 0 auto;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+}
+
+.city:last-child {
+  border: none;
 }
 
 .time {
   display: flex;
-  font-size: 30px;
+  font-size: 36px;
   font-weight: bold;
 }
 
@@ -55,4 +60,13 @@ footer {
   font-size: 15px;
   vertical-align: middle;
   line-height: 30px;
+}
+
+.city-name {
+  font-size: 25px;
+  margin: 0 0 5px;
+}
+
+.date {
+  font-size: 13px;
 }
