--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 .container {
   background-color: white;
-  width: 300px;
+  width: 800px;
   margin: 0 auto;
   margin-top: 20px;
   border-radius: 10px;
@@ -12,11 +12,12 @@
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-h1 {
-  font-size: 30px;
+.h1 {
+  font-size: 40px;
   text-align: center;
   padding: 10px;
   font-family: sans-serif;
+  font-weight: bold;
 }
 
 .drop-down {
@@ -41,7 +42,7 @@ footer {
   padding-bottom: 20px;
   display: flex;
   justify-content: space-between;
-  max-width: 40%;
+  max-width: 70%;
   margin: 0 auto;
   border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
 }
